--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppTheme.NoActionBar"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
-            android:name="pl.librus.client.ui.MainActivity"
+            android:name=".ui.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -29,11 +29,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="pl.librus.client.ui.LoginActivity"
+            android:name=".ui.LoginActivity"
             android:label="Zaloguj się"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ui.SettingsActivity" />
+
+        <!-- Widget -->
+        <receiver android:name=".widget.LibrusWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/librus_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
