--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
             applicationIdSuffix ""
         }
         foss {
-            resValue "string", "app_name", "Dziennik (foss)"
+            resValue "string", "app_name", "Dziennik"
             applicationIdSuffix ""
         }
         dev {
